feat: 初始化画板

--- a/src/style.css
+++ b/src/style.css
@@ -27,21 +27,20 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1, h3 {
+  margin: 0;
+  line-height: 3;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 14px;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -50,6 +49,10 @@ button {
 }
 button:hover {
   border-color: #646cff;
+}
+button.primary {
+  background-color: #646cff;
+  color: #fff;
 }
 button:focus,
 button:focus-visible {
@@ -61,9 +64,8 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
